--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-native": ">=0.60.0",
-    "@react-native-firebase/messaging": ">=18.0.0"
+    "@react-native-firebase/messaging": ">=18.0.0",
+    "@appmetrica/react-native-analytics": ">=3.5.0"
   },
   "react-native": {
     "android": {
