--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+
 jobs:
   create-release:
     runs-on: ubuntu-latest
@@ -53,6 +56,8 @@ jobs:
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ steps.package.outputs.version }}
@@ -79,3 +84,4 @@ jobs:
             - [GitHub repository](https://github.com/moseffect21/appmetrica-push-sdk)
           draft: false
           prerelease: false
+          fail_on_unmatched_files: false
